src/styles/_misc.scss
.bg-primary {
    background-color: #090E16;
}

.box {
    height: 50px;
    width: 50px;
    background-color: #fff;
}

.top-20 {
    top: 20px;
}

.greeting {
    display: inline-flex;
    align-items: center;
    gap: 8px;
    border-radius: 20px;
    padding: 8px 16px;
    background-color: #14142a;
}

.home-avatar {
    height: 230px;
    margin-left: 11px;
}

.w-200 {
    width: 200px;
}

.w-280 {
    width: 280px;
}

.bg-secondary {
    background-color: #14142a !important;
}

.primary-border {
    border: 1px solid #3d2f77;
}

.primary-border-b {
    border-bottom: 1px solid #3d2f77;
}

.primary-border-t {
    border-top: 1px solid #3d2f77;
}

.profile {
    border: 1px solid #3d2f77;
    border-radius: 50%;
    overflow: hidden;

    img {
        height: 250px;
        width: 250px;
    }
}

.profile-card {
    display: flex;
    align-items: center;
    justify-content: center;
    gap: 80px;
    padding: 20px;
    border-radius: 16px;
    background-color: #090E16;
    border: 1px solid #3d2f77;

    &:not(:last-child) {
        margin-bottom: 20px;
    }

    &.bg-secondary {
        .greeting {
            background-color: #090E16;
        }
    }
}

.h-100-20 {
    height: calc(100vh - 20px);
}

.animation-container {
    width: 426px;
    height: 426px;
    background-color: #201a3f;
    border-radius: 50%;
    box-shadow: 0px 0px 30px rgba(123, 74, 226, 0.5); /* Softer, more visible glow */
    display: flex;
    justify-content: center;
    align-items: center;
}

@media (max-width: 600px) {
    .animation-container {
        max-width: 300px;
        max-height: 300px;
    }
}

.home-heading {
    font-size: 32px;
    font-weight: bold;
    margin-top: 28px;
    margin-bottom: 32px;
    line-height: 40px;
}

.home-section {
    padding: 80px 0;

    &:not(:last-child) {
        border-bottom: 1px solid #3d2f77;
    }
}

.text-secondary {
    color: #727880;
}

.primary-grad {
    background-image: linear-gradient(to right, #14142a , transparent);
}

.primary-grad-bottom {
    background-image: linear-gradient(#14142a , transparent);
}

.h-200 {
    height: 200px;
}

.badge-gray {
    background-color:#2a2e36;
    border-radius: 20px;
    padding: 3px 8px;
    font-size: 12px;
    color: #b9b7b7;
}

.h-80 {
    height: 80px;
}

.w-80 {
    width: 80px;
}

.h-450 {
    height: 450px;
}

.h-300 {
    height: 300px;
}

